# Robotica_Industrial

opencv/gray/: CMakeLists.txt
opencv/gray/src/: main.cpp
opencv/video/: CMakeLists.txt
opencv/video/src/: main.cpp
opencv/vision_op1/: CMakeLists.txt
opencv/vision_op1/include/: piramid.h
opencv/vision_op1/src/: main.cpp  piramid.cpp
opencv/vision_op2/: CMakeLists.txt
opencv/vision_op2/src/: main.cpp
presion/: CMakeLists.txt
presion/include/: presion.h
presion/src/: main.cpp  presion.cpp
ros_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ros_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ros_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_ws/devel/.private/motor_controller/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_ws/devel/.private/rosserial/: .catkin
ros_ws/devel/.private/rosserial_arduino/: .catkin  local_setup.sh
ros_ws/devel/.private/rosserial_chibios/: .catkin  .rosinstall  local_setup.sh
ros_ws/devel/.private/rosserial_client/: .catkin  .rosinstall  local_setup.sh
ros_ws/devel/.private/rosserial_embeddedlinux/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_ws/devel/.private/rosserial_mbed/: .catkin
ros_ws/devel/.private/rosserial_msgs/: .catkin  local_setup.sh
ros_ws/devel/.private/rosserial_python/: .catkin  local_setup.sh
ros_ws/devel/.private/rosserial_server/: .catkin  .rosinstall
ros_ws/devel/.private/rosserial_test/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_ws/devel/.private/rosserial_tivac/: .catkin
ros_ws/devel/.private/rosserial_vex_cortex/: .catkin  local_setup.sh
ros_ws/devel/.private/rosserial_vex_v5/: .catkin  .rosinstall
ros_ws/logs/rplidar_ros/: build.check.000.log.stderr  build.check.003.log.stderr  build.make.000.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.019.log.stderr  build.make.022.log.stderr  build.make.027.log.stderr  build.make.037.log.stderr
ros_ws/src/motor_controller/: CMakeLists.txt
sort/: CMakeLists.txt
sort/src/: main.cpp
(+242 files in other folders)
